--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
+  "presets": ["es2015", "stage-0", "react"]
 }
