--- a/package.json
+++ b/package.json
@@ -13,32 +13,38 @@
     "gauge"
   ],
   "devDependencies": {
+    "@types/react": "^16.3.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.17.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.6.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "peerDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "scripts": {
-    "example": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base example/ --config ./example/webpack.example.config.js",
+    "example": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --mode=development --content-base example/ --config ./example/webpack.example.config.js",
     "gh-pages": "node ./node_modules/webpack/bin/webpack.js --content-base example/ --config ./example/webpack.example.config.js; cp ./example/index.html /tmp/index.html; cp ./example/bundle.js /tmp/bundle.js; git checkout gh-pages; cp /tmp/index.html ./index.html; cp /tmp/bundle.js ./bundle.js; git commit -a -m 'Automatic Example Update'; git push origin gh-pages; git checkout master;",
-    "build": "node ./node_modules/babel-cli/bin/babel.js ./src --plugins add-module-exports --out-dir ./lib",
-    "prepublish": "node ./node_modules/babel-cli/bin/babel.js ./src --plugins add-module-exports --out-dir ./lib"
+    "build": "./node_modules/.bin/tsc --jsx react --esModuleInterop --outdir lib/ --declaration ./src/Gauge.tsx",
+    "prepublish": "./node_modules/.bin/tsc --jsx react --esModuleInterop --outdir lib/ --declaration ./src/Gauge.tsx"
   },
   "repository": {
     "type": "git",
@@ -47,5 +53,6 @@
   "bugs": {
     "url": "https://github.com/Reggino/react-svg-gauge/issues"
   },
-  "homepage": "https://github.com/Reggino/react-svg-gauge#readme"
+  "homepage": "https://github.com/Reggino/react-svg-gauge#readme",
+  "types": "./lib/Gauge.d.ts"
 }
