--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "eslint": "^6.8.0",
     "eslint-config-kingsquare": "^6.0.4",
     "prettier": "^2.1.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.14.0 || ^17.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0",
     "ts-loader": "^5.2.1",
     "typescript": "^3.9.7",
     "webpack": "^4.20.2",
@@ -36,8 +36,8 @@
     "webpack-dev-server": "^3.1.9"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.14.0 || ^17.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0"
   },
   "eslintConfig": {
     "extends": "kingsquare"
